openapi спецификация ручки входа
