# backend/docs/swagger.json
@@ -893,7 +893,7 @@
                 }
             }
         },
-        "/campus/university_id/{id}": {
+        "/campus/university/{university}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -904,12 +904,12 @@
                 "tags": [
                     "campus"
                 ],
-                "summary": "Get campus by university_id",
+                "summary": "Get campus by university",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "campus university_id",
-                        "name": "university_id",
+                        "description": "campus university",
+                        "name": "university",
                         "in": "path",
                         "required": true
                     }
@@ -918,7 +918,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.Campus"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entities.Campus"
+                            }
                         }
                     },
                     "400": {
@@ -1097,7 +1100,7 @@
                 }
             }
         },
-        "/class/auditory_id/{id}": {
+        "/class/auditory/{name}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -1108,11 +1111,11 @@
                 "tags": [
                     "class"
                 ],
-                "summary": "Get class by auditory id",
+                "summary": "Get class by auditory",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "class auditory id",
+                        "description": "class auditory",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -1400,6 +1403,126 @@
                 }
             }
         },
+        "/schedule/search/group": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "schedule"
+                ],
+                "summary": "Search groups",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ScheduleGroups"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/schedule/search/name": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "schedule"
+                ],
+                "summary": "Search names",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ScheduleNames"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/schedule/search/teacher": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "schedule"
+                ],
+                "summary": "Search teachers",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ScheduleTeachers"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/schedule/teacher/{teacher}": {
             "get": {
                 "consumes": [
@@ -1445,6 +1568,61 @@
                     },
                     "500": {
                         "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/student/add": {
+            "post": {
+                "description": "Creates multiple students with their associated data (university, faculty, department, group).",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user data"
+                ],
+                "summary": "Create student",
+                "parameters": [
+                    {
+                        "description": "Array of user data to be added",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entities.AddUserDataRequest"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/entities.AddUserDataResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload",
+                        "schema": {
+                            "$ref": "#/definitions/entities.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
                         "schema": {
                             "$ref": "#/definitions/entities.ErrorResponse"
                         }
@@ -1695,11 +1873,66 @@
         }
     },
     "definitions": {
+        "entities.AddUserDataRequest": {
+            "type": "object",
+            "properties": {
+                "department": {
+                    "type": "string"
+                },
+                "educational_direction": {
+                    "type": "string"
+                },
+                "faculty": {
+                    "type": "string"
+                },
+                "father_name": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "group": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "permission_id": {
+                    "type": "integer"
+                },
+                "university": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.AddUserDataResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "father_name": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "entities.Audience": {
             "type": "object",
             "properties": {
-                "campus_id": {
-                    "type": "integer"
+                "campus": {
+                    "type": "string"
                 },
                 "capacity": {
                     "type": "integer"
@@ -1730,19 +1963,16 @@
                 "name": {
                     "type": "string"
                 },
-                "university_id": {
-                    "type": "integer"
+                "university": {
+                    "type": "string"
                 }
             }
         },
         "entities.Class": {
             "type": "object",
             "properties": {
-                "academic_discipline_id": {
-                    "type": "integer"
-                },
-                "auditory_id": {
-                    "type": "integer"
+                "auditory": {
+                    "type": "string"
                 },
                 "date": {
                     "type": "string"
@@ -1774,6 +2004,9 @@
                 "type": {
                     "type": "string"
                 },
+                "university": {
+                    "type": "string"
+                },
                 "week": {
                     "type": "integer"
                 },
@@ -1785,7 +2018,7 @@
         "entities.CreateAudiencesRequest": {
             "type": "object",
             "properties": {
-                "campus_id": {
+                "campus": {
                     "type": "integer"
                 },
                 "capacity": {
@@ -1819,8 +2052,8 @@
                 "name": {
                     "type": "string"
                 },
-                "university_id": {
-                    "type": "integer"
+                "university": {
+                    "type": "string"
                 }
             }
         },
@@ -1835,11 +2068,8 @@
         "entities.CreateClassesRequest": {
             "type": "object",
             "properties": {
-                "academic_discipline_id": {
-                    "type": "integer"
-                },
-                "auditory_id": {
-                    "type": "integer"
+                "auditory": {
+                    "type": "string"
                 },
                 "date": {
                     "type": "string"
@@ -1938,6 +2168,39 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "entities.ScheduleGroups": {
+            "type": "object",
+            "properties": {
+                "groups": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "entities.ScheduleNames": {
+            "type": "object",
+            "properties": {
+                "names": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "entities.ScheduleTeachers": {
+            "type": "object",
+            "properties": {
+                "teachers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
